# consumer_bot

./: README.md  pyproject.toml
chroma_db/: chroma.sqlite3
src/consumer_bot/: bot.py  data_prep.py  prompt_ai.py  quickstart.py
